--- a/src/components/Stat/Stat.module.css
+++ b/src/components/Stat/Stat.module.css
@@ -1,18 +1,20 @@
-.container{
-    text-align: center;
-    padding: 8px 24px;
-    /* color: ${props => (props.isPositive ? '#388E3C' : '#D32F2F')}; */
-    color: #388E3C;
-    user-select: none;
+.container {
+  text-align: center;
+  padding: 8px 24px;
+  color: #d32f2f;
+  user-select: none;
 }
-.label{
+.positive {
+  color: #388e3c;
+}
+.label {
   margin-top: 0;
   margin-bottom: 8px;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 24px;
 }
-.value{
+.value {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 48px;
